--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
   <header>
     <% if user_signed_in? %>
       <li>
+        <%= link_to '投稿フォーム', new_post_image_path %>
+      </li>
+
+      <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
