--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,9 @@
-<div>
-  <h3><%= @user.name %></h3>
+<div class="profile-container">
+  <h3 class="profile-name"><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
-   <% if @user == current_user %>
-    <p><%= link_to "プロフィール編集", user_path(user.id) %></p>
+  <% if @user.id == current_user.id %>
+  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
   <% end %>
 </div>
 
-
-<% @post_images.each do |post_image| %>
-<div>
-  <%= link_to post_image_path(post_image.id) do %>
-    <%= image_tag post_image.get_image %>
-  <% end %>
-  <p>投稿ユーザー画像：<%= image_tag post_image.user.get_profile_image(100,100) %></p>
-  <p>ショップ名：<%= post_image.shop_name %></p>
-  <p>説明：<%= post_image.caption %></p>
-  <p>ユーザーネーム：<%= post_image.user.name %></p>
-</div>
-<% end %>
+<%= render 'post_images/list', post_images: @post_images %>
